kubernetes/deployment.yml
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: springboot
  namespace: capstone
spec:                
  selector:         
    matchLabels:
      app: springboot
      tier: backend
  replicas: 1        
  template:
    metadata:
      labels:        
        app: springboot
        tier: backend
    spec:
      containers:
        - name: springboot
          image: docker.io/himanshuchaudhary/spring-boot:7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080  
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
