kubernetes/registry.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: capstone
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: capstone
spec:
  selector:
    matchLabels:
      app: registry
  serviceName: registry
  template:
    metadata:
      labels: 
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
          requests:
            memory: "80Mi"
            cpu: "50m"
        ports:
        - containerPort: 5000
        volumeMounts:
          - mountPath: /var/lib/registry
            name: registry
  volumeClaimTemplates:
  - metadata:
      name: registry
    spec:
      storageClassName: fast
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
