kubernetes/spring-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: springboot
  namespace: capstone
  labels:
    name: springboot
spec:
  ports:
    - port: 8080      
      targetPort: 8080  
      protocol: TCP
  selector:           
    app: springboot
    tier: backend
